# IP-Camera-Player-Using-Python

./: BEFORE_AFTER_COMPARISON.md  DOCUMENTATION_INDEX.md  FEATURE_SUMMARY.txt  IMPLEMENTATION_SUMMARY.md  QUICK_START_GUIDE.md  SMOOTH_RESOLUTION_TESTING.md  debug_ui.py  ip_camera_player.py  layout_test.py  pyproject.toml  test_offline_image.py  visual_debug.py
demo/: camera_security.py  demo_camera_config_ui.py  demo_camera_panel.py  demo_camera_tree_view.py  demo_grid_layout.py  demo_left_sidebar.py  demo_multi_camera.py  demo_security_features.py  demo_top_navigation_bar.py  demo_ui_integration.py  demo_ui_styling.py
doc/: CAMERA_CONFIG_UI_IMPLEMENTATION.md  CAMERA_GRID_LAYOUT_IMPLEMENTATION.md  CAMERA_PANEL_IMPLEMENTATION.md  ERROR_HANDLING_IMPLEMENTATION.md  FINAL_INTEGRATION_TEST_SUMMARY.md  MULTI_CAMERA_INTEGRATION_SUMMARY.md  SECURITY_IMPLEMENTATION.md  SMOOTH_RESOLUTION_ARCHITECTURE.md  SMOOTH_RESOLUTION_TRANSITION.md  STYLING_IMPROVEMENTS_COMPARISON.md  TASK_15_UI_INTEGRATION_SUMMARY.md  TASK_17_FINAL_UI_TESTING_SUMMARY.md  TOP_NAVIGATION_BAR_IMPLEMENTATION.md  UI_STYLING_IMPLEMENTATION.md
ip_camera_player.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test_camera_config_ui.py  test_camera_encryption_integration.py  test_camera_grid_layout.py  test_camera_panel.py  test_camera_panel_features.py  test_camera_tree_view.py  test_error_handling.py  test_final_integration.py  test_left_sidebar.py  test_multi_camera_integration.py  test_performance.py  test_security.py  test_top_navigation_bar.py  test_ui_integration_final.py  verify_error_handling.py
(+3 files in other folders)
